--- a/app/src/main/res/layout/original_calisilmis.xml
+++ b/app/src/main/res/layout/original_calisilmis.xml
@@ -25,8 +25,8 @@
             android:id="@+id/hourLinear"
             android:paddingBottom="5dp"
             android:paddingTop="5dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:orientation="vertical"
             android:layout_weight="1"
             >
@@ -36,15 +36,13 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:background="@color/colorRed"
-
+                android:layout_weight="1"
+                android:layout_marginBottom="10dp"
                 />
-            <Space
-                android:layout_width="5sp"
-                android:layout_height="5sp" />
 
             <EditText
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:text="07"
                 android:layout_gravity="center"
                 android:textSize="50sp"
@@ -61,8 +59,11 @@
                 android:layout_gravity="center"
                 android:background="@color/colorRed"
                 android:layout_weight="1"
+                android:layout_marginTop="10dp"
                 />
         </LinearLayout>
+
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -82,8 +83,8 @@
 
         <LinearLayout
             android:id="@+id/minuteLinear"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:orientation="vertical"
             android:divider="?android:dividerHorizontal"
@@ -97,13 +98,12 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:background="@color/colorRed"
+                android:layout_weight="1"
                 />
-            <Space
-                android:layout_width="5sp"
-                android:layout_height="5sp" />
+
             <EditText
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:text="07"
                 android:layout_gravity="center"
                 android:textSize="50sp"
@@ -111,12 +111,14 @@
                 android:textColor="@android:color/white"
                 android:inputType="number"
                 android:singleLine="true"
+                android:layout_weight="1"
                 />
             <Button
                 android:background="@color/colorRed"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
+                android:layout_weight="1"
                 />
         </LinearLayout>
 
@@ -137,8 +139,8 @@
 
         <LinearLayout
             android:id="@+id/secondLinear"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:orientation="vertical"
             android:layout_weight="1"
             android:paddingBottom="5dp"
@@ -149,13 +151,12 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:background="@color/colorRed"
+                android:layout_weight="1"
                 />
-            <Space
-                android:layout_width="5sp"
-                android:layout_height="5sp" />
+
             <EditText
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:text="07"
                 android:layout_gravity="center"
                 android:textSize="50sp"
@@ -163,12 +164,14 @@
                 android:textColor="@android:color/white"
                 android:inputType="number"
                 android:singleLine="true"
+                android:layout_weight="1"
                 />
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:background="@color/colorRed"
+                android:layout_weight="1"
                 />
 
         </LinearLayout>
@@ -357,7 +360,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_toRightOf="@+id/ok_btn_id"
-                android:text="CANCEL"
+                android:text="Cancel"
                 android:textStyle="bold"
                 android:layout_weight="1"
                 android:layout_marginLeft="10dp"
